# acro

./: Cargo.toml  LICENSE  README.md  deno.json
crates/acro_assets/: Cargo.toml
crates/acro_assets/src/: asset.rs  fs.rs  lib.rs  loader.rs  wasm.rs
crates/acro_bin/: Cargo.toml
crates/acro_bin/src/: main.rs
crates/acro_build/: Cargo.toml
crates/acro_build/src/: lib.rs  pack.rs  utils.rs  web.rs
crates/acro_ecs/: Cargo.toml
crates/acro_ecs/benches/: main.rs
crates/acro_ecs/src/: application.rs  archetype.rs  bundle.rs  entity.rs  lib.rs  plugin.rs  ref_map.rs  registry.rs  resource.rs  schedule.rs  storage.rs  systems.rs  utils.rs  world.rs
crates/acro_ecs/src/pointer/: change_detection.rs
crates/acro_ecs/src/query/: filters.rs  info.rs  iter.rs  mod.rs  transform.rs  utils.rs
crates/acro_ecs/src/storage/: anyvec.rs  mod.rs  table.rs
crates/acro_log/: Cargo.toml
crates/acro_log/src/: lib.rs
crates/acro_math/: Cargo.toml
crates/acro_math/src/: lib.rs  ops.rs  transform.rs  tree.rs  types.rs
crates/acro_physics/: Cargo.toml
crates/acro_physics/src/: integrator.rs  lib.rs  properties.rs
crates/acro_reflect/: Cargo.toml
crates/acro_reflect/reflect_derive/: Cargo.toml
crates/acro_reflect/reflect_derive/src/: lib.rs
crates/acro_reflect/src/: lib.rs  math.rs  reflect.rs
crates/acro_render/: Cargo.toml
crates/acro_render/src/: camera.rs  color.rs  lib.rs  mesh.rs  mesh_geometry.rs  ops.rs  shader.rs  state.rs  texture.rs  window.rs
crates/acro_render/src/shaders/: basic-mesh.wgsl
crates/acro_scene/: Cargo.toml
crates/acro_scene/src/: lib.rs  manager.rs  scene.rs
crates/acro_scripting/: Cargo.toml
crates/acro_scripting/src/: behavior.rs  events.rs  function.rs  lib.rs  ops.rs  reflect.rs  runtime.rs  source_file.rs
crates/acro_scripting/src/events/: emitter.rs  mod.rs  queue.rs  store.rs
crates/acro_scripting/src/js/: bootstrap.js  test.js
crates/acro_scripting/src/platform/: deno_ops.rs  function.rs  mod.rs  ops.rs  wasm_ops.rs
crates/acro_ui/: Cargo.toml
crates/acro_ui/src/: box_renderer.rs  button.rs  context.rs  document.rs  element.rs  lib.rs  panel.rs  positioning_options.rs  rect.rs  rendering.rs  screen_ui.rs  text.rs  ui_element_state.rs
crates/acro_ui/src/shaders/: box.wgsl
crates/acro_web/: Cargo.toml
crates/acro_web/src/: lib.rs  panic_hook.rs
examples/: main.scene
examples/simple/: main.scene
examples/simple/shaders/: basic-mesh.wgsl
examples/simple/src/: fly-camera.ts  test.ts
images/: acro-banner.excalidraw
lib/: core.ts  deno.json  deno.ts  globals.ts  init.ts  input.ts  mod.ts  text.ts  transform.ts  tsconfig.json  vec2.ts  vec3.ts
lib/core/: deno.json  deno.ts  ecs.ts  events.ts  globals.ts  init.ts  mod.ts  ops.ts
lib/input/: deno.json  mod.ts
lib/math/: deno.json  mod.ts  quaternion.ts  transform.ts  vec2.ts  vec3.ts
lib/ui/: button.ts  deno.json  mod.ts  text.ts
web-runner/: README.md  bun.lockb  package.json
web-runner/src/: index.html
