[package]
name = "acro_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
acro_log = { path = "../acro_log" }
acro_math = { path = "../acro_math" }
acro_render = { path = "../acro_render" }
acro_scripting = { path = "../acro_scripting" }
tracing = "0.1.40"
