[package]
name = "acro_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
assert_unordered = "0.3.5"

[[bench]]
name = "main"
harness = false
