[package]
name = "acro_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
eyre = "0.6.12"
fnv = "1.0.7"
itertools = "0.13.0"
ouroboros = "0.18.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.11"
tracing = "0.1.40"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
assert_unordered = "0.3.5"

[[bench]]
name = "main"
harness = false
