[package]
name = "acro_math"
version = "0.1.0"
edition = "2021"

[dependencies]
acro_ecs = { path = "../acro_ecs" }
acro_reflect = { path = "../acro_reflect" }
acro_scripting = { path = "../acro_scripting" }
cfg-if = "1.0.0"
deno_core = "0.299.0"
rustyscript = "0.8.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"

[features]
double-precision = []
