[package]
name = "acro_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
acro_math = { path = "../acro_math" }
acro_scene = { path = "../acro_scene" }
acro_scripting = { path = "../acro_scripting" }
chrono = "0.4.39"
cfg-if = "1.0.0"
eyre = "0.6.12"
parking_lot = "0.12.3"
pollster = "0.3.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.11"
tracing = "0.1.40"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.299.0"
rustyscript = { version = "0.8.0", features = ["fs_import"] }
