[package]
name = "acro_render"
version = "0.1.0"
edition = "2021"

[dependencies]
acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
acro_math = { path = "../acro_math" }
bytemuck = { version = "1.16.1", features = ["derive"] }
cfg-if = "1.0.0"
parking_lot = "0.12.3"
pollster = "0.3.0"
tracing = "0.1.40"
wgpu = "0.20.1"
winit = "0.30.2"

[features]
double-precision = []
