[package]
name = "acro_render"
version = "0.1.0"
edition = "2021"

[dependencies]
# acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
# acro_math = { path = "../acro_math" }
# acro_scene = { path = "../acro_scene" }
acro_scripting = { path = "../acro_scripting" }
bytemuck = { version = "1.16.1", features = ["derive"] }
cfg-if = "1.0.0"
eyre = "0.6.12"
getrandom = { version = "0.2.1", features = ["js"] }
parking_lot = "0.12.3"
pollster = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.11"
tracing = "0.1.40"
wgpu = { version = "22.1.0", features = ["serde"] }
winit = { version = "0.30.2", features = ["serde"] }
image = "0.25.2"

[features]
double-precision = []
