[package]
name = "acro_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acro_ecs = { path = "../acro_ecs" }
acro_math = { path = "../acro_math" }
# acro_render = { path = "../acro_render" }
acro_scene = { path = "../acro_scene" }
acro_scripting = { path = "../acro_scripting" }
wasm-bindgen = "0.2.100"
