[package]
name = "acro_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
acro_math = { path = "../acro_math" }
acro_physics = { path = "../acro_physics" }
acro_render = { path = "../acro_render" }
acro_scene = { path = "../acro_scene" }
acro_scripting = { path = "../acro_scripting" }
acro_ui = { path = "../acro_ui" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
