[package]
name = "acro_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acro_assets = { path = "../acro_assets" }
acro_ecs = { path = "../acro_ecs" }
acro_math = { path = "../acro_math" }
acro_physics = { path = "../acro_physics" }
acro_render = { path = "../acro_render" }
acro_scene = { path = "../acro_scene" }
acro_scripting = { path = "../acro_scripting" }
acro_ui = { path = "../acro_ui" }
web-sys = "0.3.77"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
